@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 - pts-core: Add rename-result-file option'
 - pts-core: WebSocket bug-fixes
 - pts-core: Other bug-fixes
+- pts-core: Disable the compiler-mask by default on FreeBSD/PC-BSD due to potential test installation issues on 10.0-RELEASE
 
 Phoronix Test Suite 5.0 Milestone 1
 6 February 2014
